Possible fix for button styling on mobile devices

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,6 +14,8 @@ img {
 }
 
 .button {
+    -moz-appearance: none;
+    -webkit-appearance: none;
     color: #fff !important;
     font-size: 16px;
     text-transform: uppercase;
